authorization abroad block whitespace fix

--- a/assets/sass/authorization.sass
+++ b/assets/sass/authorization.sass
@@ -152,6 +152,9 @@
 
 	&__abroad
 		text-align: center
+		text-overflow: ellipsis
+		white-space: nowrap
+		overflow: hidden
 		color: $grey-4
 		font-size: 12px
 		font-weight: 400
